--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,14 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.2-4"
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha1'
+
+
+        // README
+        // there was a problem with kotlin-gradle-plugin and android gradle plugin
+        // so use version 1.1.2-2 and disable kotlin.incremental in gradle.properties
+        // hope this will bi fixed in future
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.2-2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
