add dark sky api key

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
+def DARK_SKY_API_KEY = '"' + DARK_SKY_API_KEY_PROP + '"' ?: '"Define dark sky api key"'
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -12,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField 'String', 'DARK_SKY_API_KEY', DARK_SKY_API_KEY
     }
     buildTypes {
         release {
