--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     kapt "com.android.databinding:compiler:2.5.0-alpha-preview-02"
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    compile 'com.squareup.okhttp3:okhttp:3.7.0'
 }
 repositories {
     mavenCentral()
