--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     compile 'com.squareup.okhttp3:okhttp:3.7.0'
+    compile 'com.firebase:firebase-jobdispatcher:0.6.0'
 }
 repositories {
     mavenCentral()
