--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             </intent-filter>
         </service>
 
-        <receiver android:name="WeatherWidgetProvider" >
+        <receiver android:name=".ui.WeatherWidgetProvider" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
