notification after 10 second with alarm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/weather_widget_info" />
         </receiver>
+
+        <receiver android:name=".ui.WeatherNotificatinReceiver"
+            android:process=":remote"/>
     </application>
 
 </manifest>
